--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,38 +1,113 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header-container {
+  /* background-color: #131921; */
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  gap: 1rem;
+  padding: 0 1.9rem;
+  border-bottom: 1px solid rgb(215, 211, 211);
+  background-color: #ffffff;
+}
+.header-content-1 {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.logo {
+  height: 4rem;
+  width: 7.2rem;
+  object-fit: contain;
+  margin-right: 8rem;
 }
 
-.App-link {
-  color: #61dafb;
+.search-container {
+  padding: 0 0.8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+  gap: 0.2rem;
+  /* width: 38rem; */
+  /* width: 70%; */
+  background-color: rgb(231, 238, 238);
+  border-radius: 1.8rem;
+  margin-right: 4rem;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.input-search {
+  /* width: 30rem; */
+  /* flex: 1; */
+  width: 100%;
+  border-radius: 0 1.8rem 1.8rem 0;
+  height: 2.5rem;
+  border: none;
+  padding: 0 1rem;
+  background-color: rgb(231, 238, 238);
+  font-size: 0.95rem;
+  font-weight: 500;
+  color: #0f1a1c;
+  &:focus {
+    outline: none;
+    color: red;
+    font-weight: 600;
   }
-  to {
-    transform: rotate(360deg);
+}
+.img-banana {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem;
+  height: fit-content;
+  height: 2rem;
+  width: 2rem;
+  cursor: pointer;
+  &:hover {
+    background-color: rgb(231, 238, 238);
+    border-radius: 50%;
   }
+  /* width: 1rem; */
+  > img {
+    height: 1.5rem;
+    width: 1.2rem;
+  }
+}
+.content-2-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 16rem;
+}
+.get-app-header {
+  display: flex;
+  align-items: center;
+  gap: 0.7rem;
+  background-color: rgb(231, 238, 238);
+  padding: 0.6rem 1rem;
+  color: rgb(98, 96, 96);
+  border-radius: 5rem;
+  font-size: 0.8rem;
+  cursor: pointer;
+}
+.lskhnkc {
+  color: #e5e9e9;
+  font-size: 1.5rem;
+}
+.login {
+  background-color: rgb(231, 45, 45);
+  padding: 0.5rem 1rem;
+  border-radius: 5rem;
+  color: #ffffff;
+  cursor: pointer;
+  > h4 {
+    font-weight: 400;
+  }
+}
+.bar-icon {
+  font-size: 1.2rem;
+}
+.dot-icon {
+  font-size: 1.5rem;
+  cursor: pointer;
+  color: rgb(135, 139, 139);
 }
