--- a/src/components/Left_side_Bar/Left_side_Bar.css
+++ b/src/components/Left_side_Bar/Left_side_Bar.css
@@ -5,13 +5,30 @@
   grid-column-gap: 1rem;
   height: 100vh;
 }
+#leftSideBar_id::-webkit-scrollbar {
+  width: 0.4rem;
+}
 .leftSide_bar {
   top: 4.08rem;
   /* background-color: aqua; */
+  /* --scrollbarBG: #cfd8dc; */
+  --thumbBG: #bcc0c3;
+  width: 77%;
   position: sticky;
-  height: fit-content;
-  overflow: auto;
-  padding: 2rem 3rem;
+  height: 78vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding: 2rem 1.5rem 2rem 3rem;
+  scrollbar-width: thin;
+  scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+}
+.leftSide_bar::-webkit-scrollbar-track {
+  background: var(--scrollbarBG);
+}
+.leftSide_bar::-webkit-scrollbar-thumb {
+  background-color: var(--thumbBG);
+  border-radius: 6px;
+  border: 3px solid var(--scrollbarBG);
 }
 .right-side-bar {
   background-color: blue;
@@ -52,4 +69,18 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.left-side-bar {
+  border-left: 0.18rem solid rgb(237, 231, 231);
+  margin-left: 0.5rem;
+  padding-left: 0.5rem;
+}
+.left-side1 {
+  align-items: center;
+  justify-content: center;
+  > p {
+    font-size: 0.9rem;
+    margin: 0.8rem 0.8rem;
+    color: rgb(104, 106, 107);
+  }
 }
