--- a/src/components/Left_side_Bar/Left_side_Bar.css
+++ b/src/components/Left_side_Bar/Left_side_Bar.css
@@ -3,19 +3,21 @@
   display: grid;
   grid-template-columns: 2fr 8fr;
   grid-column-gap: 1rem;
-  height: 100vh;
+  /* height: 100vh; */
 }
 #leftSideBar_id::-webkit-scrollbar {
   width: 0.4rem;
 }
 .leftSide_bar {
+  position: sticky;
+  border: 0.015rem solid rgb(212, 207, 207);
   top: 4.08rem;
   /* background-color: aqua; */
   /* --scrollbarBG: #cfd8dc; */
   --thumbBG: #bcc0c3;
-  width: 77%;
-  position: sticky;
+  width: 78%;
   height: 78vh;
+  /* height: fit-content; */
   overflow-y: scroll;
   overflow-x: hidden;
   padding: 2rem 1.5rem 2rem 3rem;
@@ -30,11 +32,7 @@
   border-radius: 6px;
   border: 3px solid var(--scrollbarBG);
 }
-.right-side-bar {
-  background-color: blue;
-  /* height: 100vh; */
-  position: static;
-}
+
 .left-name-icons {
   display: flex;
   gap: 1rem;
