--- a/src/components/Signup/Login/Login.css
+++ b/src/components/Signup/Login/Login.css
@@ -31,7 +31,7 @@
 }
 .login-container {
   margin: 1rem 1rem 1rem 5rem;
-  height: 68%;
+  height: 68vh;
   overflow: scroll;
   overflow-x: hidden;
   > h1 {
@@ -46,6 +46,10 @@
       cursor: pointer;
     }
   }
+}
+.err-massage {
+  font-size: 0.8rem;
+  color: red;
 }
 .continue-google-other {
   margin-top: 2rem;
@@ -115,7 +119,7 @@
   gap: 0.5rem;
   > span {
     color: blue;
-    cursor: pointer;
+    /* cursor: pointer; */
   }
   > p {
     font-size: 0.9rem;
@@ -168,4 +172,7 @@
       cursor: pointer;
     }
   }
+}
+.fill-all-field {
+  color: red;
 }
