--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -111,3 +111,27 @@
   cursor: pointer;
   color: rgb(135, 139, 139);
 }
+.arrow-icon {
+  transform: rotate(45deg);
+}
+.plus-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.2rem;
+  color: #6d6f71;
+}
+.icons-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.advertise-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  background-color: #e0e1e2;
+  padding: 0.5rem;
+  border-radius: 3rem;
+}
