--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,6 +9,7 @@
   padding: 0 1.9rem;
   border-bottom: 1px solid rgb(215, 211, 211);
   background-color: #ffffff;
+  height: 3rem;
 }
 .header-content-1 {
   display: flex;
@@ -192,4 +193,8 @@
   font-size: 1rem;
   border: none;
   background-color: #dcdee0;
+}
+.dwopdown-container {
+  display: flex;
+  gap: 1rem;
 }
