--- a/src/components/Right_side_bar/Right_side_bar.css
+++ b/src/components/Right_side_bar/Right_side_bar.css
@@ -90,6 +90,14 @@
   flex-direction: column;
   gap: 1rem;
 }
+.imageMainContainer {
+  width: 650px;
+  height: 475px;
+  > img {
+    width: 100%;
+    height: 100%;
+  }
+}
 .fetched-main-contiant {
   border-radius: 1rem;
   padding: 1rem;
@@ -103,8 +111,12 @@
   align-items: center;
   gap: 1rem;
   margin-bottom: 1rem;
-  > h5 {
+  > div > h6,
+  h5 {
     color: rgb(164, 162, 161);
+    &:hover {
+      color: #5a5d5f;
+    }
   }
 }
 .main-containt {
@@ -349,7 +361,7 @@
   }
 }
 .right-content-comntes-after-login {
-  height: 142vh;
+  height: 102vh;
   background-color: rgb(246, 242, 242);
   padding: 2px;
   border-radius: 0.2rem;
