--- a/src/components/Right_side_bar/Right_side_bar.css
+++ b/src/components/Right_side_bar/Right_side_bar.css
@@ -144,6 +144,9 @@
     background-color: rgb(202, 209, 209);
   }
 }
+.likedPost {
+  color: red;
+}
 .disLike {
   padding: 0.4rem;
   border-radius: 50%;
