--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -121,11 +121,23 @@
   justify-content: center;
   font-size: 1.2rem;
   color: #6d6f71;
+  cursor: pointer;
+  padding: 0.4rem;
+  &:hover {
+    background-color: rgb(245, 241, 241);
+    border-radius: 50%;
+  }
 }
 .icons-header {
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+  padding: 0.5rem;
+  &:hover {
+    background-color: rgb(245, 241, 241);
+    border-radius: 50%;
+  }
 }
 .advertise-icon {
   display: flex;
@@ -135,6 +147,7 @@
   background-color: #e0e1e2;
   padding: 0.5rem;
   border-radius: 3rem;
+  cursor: pointer;
 }
 .home-content-after-login {
   cursor: pointer;
@@ -143,6 +156,7 @@
   gap: 8rem;
   margin-left: -6rem;
   padding: 0.2rem;
+  border: 1px solid rgb(255, 255, 255);
   &:hover {
     border: 1px solid rgb(244, 240, 240);
   }
