--- a/src/components/Right_side_bar/Right_side_bar.css
+++ b/src/components/Right_side_bar/Right_side_bar.css
@@ -44,8 +44,8 @@
   border-radius: 1rem;
   overflow-y: scroll;
   overflow-x: hidden;
-  scrollbar-width: thin;
   &:hover {
+    /* scrollbar-width: thin; */
     --thumbBG: #bcc0c3;
     scrollbar-color: var(--thumbBG) var(--scrollbarBG);
   }
@@ -385,4 +385,53 @@
   background-color: rgb(246, 242, 242);
   padding: 2px;
   border-radius: 0.2rem;
+}
+@media only screen and (max-width: 768px) {
+  .right_Side-crousal {
+    display: none;
+  }
+  .main-containt {
+    width: 45rem;
+  }
+  .imageMainContainer {
+    width: 46rem;
+    height: auto;
+  }
+  .icon-comment {
+    height: 1rem;
+    width: auto;
+  }
+  .share-btn {
+    height: 1.2rem;
+    width: auto;
+  }
+  .comments-icon {
+    height: 1.5rem;
+    width: auto;
+  }
+}
+@media only screen and (max-width: 322px) {
+  .main-containt {
+    width: 18rem;
+  }
+  .imageMainContainer {
+    width: 18rem;
+    height: 10rem;
+  }
+  .right-content-comntes-likes {
+    width: 5.6rem;
+    height: auto;
+  }
+  .icon-comment {
+    height: 1rem;
+    width: auto;
+  }
+  .share-btn {
+    height: 1.2rem;
+    width: auto;
+  }
+  .comments-icon {
+    height: 1.5rem;
+    width: auto;
+  }
 }
