--- a/src/components/Right_side_bar/Right_side_bar.css
+++ b/src/components/Right_side_bar/Right_side_bar.css
@@ -392,9 +392,10 @@
   }
   .main-containt {
     width: 40rem;
+    margin-right: 2.5rem;
   }
   .imageMainContainer {
-    width: 40rem;
+    width: 42rem;
     height: auto;
   }
   .icon-comment {
@@ -410,13 +411,14 @@
     width: auto;
   }
 }
-@media only screen and (max-width: 322px) {
+@media only screen and (max-width: 480px) {
   .main-containt {
-    width: 17rem;
+    width: 25rem;
   }
   .imageMainContainer {
-    width: 18rem;
-    height: 10rem;
+    width: 23rem;
+    height: 13rem;
+    margin-left: 2rem;
   }
   .fetched-main-contiant {
     border-radius: 1rem;
