--- a/src/components/Right_side_bar/Right_side_bar.css
+++ b/src/components/Right_side_bar/Right_side_bar.css
@@ -444,10 +444,6 @@
     width: 100%;
     height: 13rem;
   }
-  /* .imageMainContainer {
-    width: 750px;
-    height: 475px;
-  } */
   .fetched-main-contiant {
     border-radius: 1rem;
     padding: 0;
@@ -467,5 +463,26 @@
   .comments-icon {
     height: 1.5rem;
     width: auto;
+  }
+}
+@media only screen and (max-width: 290px) {
+  .main-containt {
+    width: 20rem;
+    margin-right: 0;
+    font-size: 1.2rem;
+    font-weight: 800;
+  }
+  .userName-image-container {
+    > div > h6,
+    h5 {
+      font-size: 1.1rem;
+      font-weight: 800;
+      &:hover {
+        color: #5a5d5f;
+      }
+    }
+  }
+  .author-img {
+    width: 3rem;
   }
 }
