--- a/src/components/Signup/Login/Login.css
+++ b/src/components/Signup/Login/Login.css
@@ -199,8 +199,20 @@
 }
 @media only screen and (max-width: 480px) {
   .Login-page {
+    background-color: rgb(248, 244, 244);
     width: 80%;
-    height: 87%;
+    height: 75%;
+  }
+  .cross-sign-div {
+    margin: 0.5rem;
+    padding: 1rem;
+  }
+}
+@media only screen and (max-width: 290px) {
+  .Login-page {
+    background-color: rgb(248, 244, 244);
+    width: 80%;
+    height: 58%;
   }
   .cross-sign-div {
     margin: 0.5rem;
