--- a/src/components/Left_side_Bar/Left_side_Bar.css
+++ b/src/components/Left_side_Bar/Left_side_Bar.css
@@ -103,6 +103,9 @@
   background-color: #e1e8ec;
 }
 @media only screen and (max-width: 768px) {
+  .main-container {
+    display: block;
+  }
   .leftSide_bar {
     display: none;
   }
