--- a/src/components/Signup/Login/Login.css
+++ b/src/components/Signup/Login/Login.css
@@ -211,6 +211,33 @@
   .login-container {
     margin: 1rem 1rem 1rem 2rem;
   }
+  .sign-container-form {
+    width: 23rem;
+  }
+
+  .sign-up-container {
+    margin: 1rem 1rem 1rem 5rem;
+    height: 21rem;
+    width: 18rem;
+
+    > h1 {
+      font-size: 1.5rem;
+      padding-bottom: 0.5rem;
+    }
+    > p {
+      font-size: 0.8rem;
+      margin-right: 1.5rem;
+    }
+  }
+  .continue-google-other {
+    margin-top: 2rem;
+    width: 19rem;
+  }
+  .google-login {
+    width: 80%;
+    font-size: 0.8rem;
+    margin-left: -0.5rem;
+  }
 }
 @media only screen and (max-width: 320px) {
   .Login-page {
